<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:padding="20dp"
    android:background="@color/colorBlue"
    >

    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/login_edt_hint_username"
    android:textSize="@dimen/font16"
    android:textColorHint="@color/colorWhite"
        android:layout_marginTop="200dp"
    />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edt_hint_password"
        android:textSize="@dimen/font16"
        android:textColorHint="@color/colorWhite"
        android:layout_marginTop="20dp"
        />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_login"
        android:textSize="@dimen/font16"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg_button"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_txt_or"
        android:gravity="center_horizontal"
        android:textSize="@dimen/font16"
        android:textColor="@color/colorWhite"
        android:padding="@dimen/font14"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_fb"
        android:textSize="@dimen/font16"
        android:background="@drawable/bg_button"
        android:textColor="@color/colorWhite"
        />

    <TextView
        android:id="@+id/click_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login_txt_doesnt"
        android:textColor="@color/colorWhite"

        />

</LinearLayout>